<resources>
    <string name="app_name">Traducteur</string>
    <string name="app_sms_name">Traduction de SMS</string>
    <string name="app_history_name">Historique des traductions</string>
    <string name="content_description"></string>
    <string name="lb_write_text">Saisissez le texte à traduire</string>
    <string name="lb_say_something">Dites quelque chose</string>
    <string name="lb_fermer">FERMER</string>
    <string name="lb_save_error">Erreur survenue pendant l\'enregistrement des données.</string>
    <string name="lb_unstable_connection">Connexion internet instable</string>
    <string name="lb_detail_unstable_connection">Les données mobiles sont instables. Vérifiez votre connexion réseau et réessayez.</string>
    <string name="lb_no_connection">Aucune connexion internet</string>
    <string name="lb_detail_no_connection">Les données mobiles sont désactivées. Connectez-vous au réseau Wi-Fi à la place ou activez les données mobiles et réessayez.</string>
    <string name="lb_lang_same">Langues identitiques</string>
    <string name="lb_detail_lang_same">Vous avez sélectionnez des langues identitiques.</string>
    <string name="lb_field_required">Ce champ est obligatoire.</string>
    <string name="lb_share_width">Partager avec :</string>
    <string name="lb_traduction_copy">Traduction copiée.</string>
    <string name="lb_launch_traduction">LANCER LA TRADUCTION</string>
    <string name="lb_text_traduction">Traduction du texte</string>
    <string name="lb_share_app">Partager l\'application</string>
    <string name="lb_sms_traduction">Traduire les SMS</string>
    <string name="lb_hitory_traduction">Historique</string>
    <string name="lb_empty_history">Aucun historique</string>
    <string name="lb_detail_empty_history">Aucune traduction enregistrée pour le moment.</string>
    <string name="lb_required_permission">Permission requise</string>
    <string name="lb_detail_required_sms_permission">Cette permission permet à l\'application d\'avoir accès à vos SMS.</string>
    <string name="lb_select_sms_to_translate">Sélectionnez le SMS à traduire</string>
    <string name="lb_url_play_store">https://play.google.com/store/apps/details?id=lveapp.traducteur</string>
    <string name="lb_message_share_app">Bonjour,\nJe tiens à te faire découvrir l\'application android Traducteur.\nClique sur le lien qui apparaît en bas de ce message, et n\'hésite pas à en parler autour de toi.</string>
    <string name="lb_google_voice_error">Google voice non supporté</string>
    <string name="lb_detail_google_voice_error">Votre appareil ne supporte pas la reconnaissance vocale.</string>
</resources>
